# cookiecutter-aiohttp

./: README.md  README.rst  cookiecutter.json
{{cookiecutter.project_name}}/: Dockerfile  docker-compose.yml  pyproject.toml  {{cookiecutter.project_name}}.yml
{{cookiecutter.project_name}}/tests/: conftest.py  test_config.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: api_calls.py  config.py  db.py  main.py  middlewares.py  routes.py  schemas.py  views.py
